bring back outline for several focus elements, fix outline on stuck nav logo

--- a/assets/styles/common/_mixins.scss
+++ b/assets/styles/common/_mixins.scss
@@ -47,7 +47,7 @@
   &:hover,
   &:focus {
     #{$slide-target} {
-      outline: none;
+      // outline: none;
       background-size: 100% 100%;
       transition-delay: 0s;
     }
