--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -66,14 +66,11 @@
       height: 100%;
       fill: color(teal);
     }
-    &:focus {
-      outline: none;
-      svg {
-        fill: color(red);
-      }
-    }
 
     @include media-nav {
+      &:focus {
+        // outline: none;
+      }
       top: 0;
       right: 0;
       width: 204px;
@@ -139,6 +136,10 @@ body.nav-stuck {
     #top {
       margin-top: 52px;
       padding-top: 120px;
+    }
+    .logo {
+      width: 80px;
+      height: 32px;
     }
     .logo-small {
       transform: translateY(0);
@@ -239,7 +240,15 @@ body.nav-open {
       display: flex;
       align-items: center;
       height: 100%;
+      &:focus,
+      &.-active {
+        // outline: none;
+        span {
+          border-bottom: 1px solid color(coolgray);
+        }
+      }
       span {
+        border-bottom: 1px solid transparent;
         &::before,
         &::after {
           display: none;
@@ -296,7 +305,7 @@ body.nav-open {
       &:hover,
       &:focus,
       &.-active {
-        outline: none;
+        // outline: none;
         span {
           &::after {
             letter-spacing: 0.25em;
